--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/pragya-gupta-7732a1119/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://www.facebook.com/pragya.gupta.182" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.facebook.com/pragya.gupta.182" class="Resume"><span class="label">Facebook</span></a></li>
 							
 						</ul>
 					</nav>
