--- a/generic.html
+++ b/generic.html
@@ -59,32 +59,12 @@
 
 				<!-- Footer -->
 				<footer id="footer">
-					<section>
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input type="text" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="3"></textarea>
-								</div>
-							</div>
-							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
-					</section>
+					
 					<section class="split contact">
 						<section class="alt">
 							<h3>Address</h3>
-							<p>500 Beale<br />
-							San Francisco, CA 94105</p>
+							<p>1 Saint Francis Pl<br />
+							San Francisco, CA 94107</p>
 						</section>
 						<section>
 							<h3>Phone</h3>
