--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									<div class="image fit"><img src="Uber.png" alt="" style="width: 400px; height: auto;display: block; margin: auto;"/></div>
 									<p>This presentation offers a detailed analysis of the groundbreaking partnership between Uber and Waymo, exploring its strategic implications in the realms of autonomous vehicle technology and urban mobility. It covers various aspects including SWOT analysis, the 4Ps of marketing, customer profiles, and the innovative value proposition, providing insights into how this collaboration is shaping the future of transportation.</p>
 									<ul class="actions special">
-										<p><a href="https://drive.google.com/file/d/1NNUl-NsF0RvrMep3ztjuQwO-FQI1XlLW/view?usp=sharing" target="_blank"><b>View Project</b></a></p>
+										<p><a href="https://drive.google.com/file/d/1zqMQSvUAusoqBzYYEpCsFKDxh3Jm-eDj/view?usp=share_link" target="_blank"><b>View Project</b></a></p>
 									</ul>
 								</article>
 								
