--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://drive.google.com/file/d/1mxCw1PNEaCtNYJK21XQUVeWAmYA_APRO/view?usp=sharing" target="_blank">Marketing Strategy<br />
+										<h2><a href="https://www.dropbox.com/scl/fi/31mrpurbk0bxkxsuwohn9/Minimalist-Beige-Cream-Brand-Proposal-Presentation.pdf?rlkey=tudxaukjkhrejz3l4i2hnjekz&st=g035ub3e&dl=0" target="_blank">Marketing Strategy<br />
 										Airbnb</a></h2>
 									</header>
 									<div class="image fit"><img src="bnb.jpg.webp" alt="" style="width: 400px; height: auto;display: block; margin: auto;"/></div>
 									<p>Delves into the revolutionary impact of the company on the hospitality industry through the lens of the shared economy. It outlines Airbnb's journey from its inception to its current status as a market leader, highlighting strategic innovations, challenges overcome, and future growth plans.</p>
 									<ul class="actions special">
-										<p><a href="https://drive.google.com/file/d/1mxCw1PNEaCtNYJK21XQUVeWAmYA_APRO/view?usp=sharing" target="_blank"><b>View Project</b></a></p>
+										<p><a href="https://www.dropbox.com/scl/fi/31mrpurbk0bxkxsuwohn9/Minimalist-Beige-Cream-Brand-Proposal-Presentation.pdf?rlkey=tudxaukjkhrejz3l4i2hnjekz&st=g035ub3e&dl=0" target="_blank"><b>View Project</b></a></p>
 									</ul>
 								</article>
 							
