--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="https://drive.google.com/file/d/1zqMQSvUAusoqBzYYEpCsFKDxh3Jm-eDj/view?usp=share_link" target="_blank">Marketing Strategy<br />
+										<h2><a href="https://www.dropbox.com/scl/fi/nge7gmrh9bu0fyh66p4fl/Green-Mint-Animated-Doodle-Marketing-Social-Media-Presentation.pdf?rlkey=imfvy7myr0f0ar7iz0ag2ikg6&st=2nkop5pu&dl=0" target="_blank">Marketing Strategy<br />
 										Instagram</a></h2>
 									</header>
 									<div class="image fit"><img src="Instagram.jpg" alt="" style="width: 400px; height: auto;display: block; margin: auto;"/></div>
 									<p>Showcasing a deep understanding of Instagram's marketing landscape, this portfolio emphasizes the development of tailored content strategies that resonate with diverse audience segments.</p>
 									<ul class="actions special">
-										<p><a href="https://drive.google.com/file/d/1zqMQSvUAusoqBzYYEpCsFKDxh3Jm-eDj/view?usp=share_link" target="_blank"><b>View Project</b></a></p>
+										<p><a href="https://www.dropbox.com/scl/fi/nge7gmrh9bu0fyh66p4fl/Green-Mint-Animated-Doodle-Marketing-Social-Media-Presentation.pdf?rlkey=imfvy7myr0f0ar7iz0ag2ikg6&st=2nkop5pu&dl=0" target="_blank"><b>View Project</b></a></p>
 									</ul>
 								</article>
 								<article>
