--- a/index.html
+++ b/index.html
@@ -119,7 +119,18 @@
 										<p><a href="https://www.dropbox.com/scl/fi/br8zo2h8jzcr4ljtbkqkt/Black-and-White-Dark-Pitch-Deck-Presentation.pdf?rlkey=eosxkp460ehncdw3p60tv11yo&st=u07cv1fx&dl=0" target="_blank"><b>View Project</b></a></p>
 									</ul>
 								</article>
-								
+
+								<article>
+									<header>
+										<h2><a href=" https://github.com/Pragya2112/Movie_Recommendation_System" target="_blank">Genre Based Movie Recommendation System<br /></a></h2>
+									</header>
+									<div class="image fit"><img src="recommend.png" alt="" style="width: 400px; height: auto;display: block; margin: auto;"/></div>
+									<p> This project is a machine learning-based recommendation system that suggests movies based on similar genres, IMDb ratings, and votes. It utilizes the k-Nearest Neighbors (k-NN) algorithm to find and recommend movies that are most similar to the one selected by a user. The system was built using Python with libraries like pandas and scikit-learn. The project demonstrates how content-based filtering can be applied to provide personalized movie suggestions based on specific features such as genre and user ratings.</p>
+									<ul class="actions special">
+										<p><a href=" https://github.com/Pragya2112/Movie_Recommendation_System" target="_blank"><b>View Project</b></a></p>
+									</ul>
+								</article>
+
 							
 								<article>
 									<header>
