--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         							<h2><a href=" https://github.com/Pragya2112/Movie_Recommendation_System" target="_blank">Genre Based Movie Recommendation System<br /></a></h2>
     								</header>
    								<div class="image fit">
-        							<img src="recommend1.jpeg" alt="" style="width: 400px; height: auto; display: block; margin: auto;"/>
+        							<img src="recommend1.png" alt="" style="width: 400px; height: auto; display: block; margin: auto;"/>
     								</div>
     								<p>This project is a machine learning-based recommendation system that suggests movies based on similar genres, IMDb ratings, and votes. It utilizes the k-Nearest Neighbors (k-NN) algorithm to find and recommend movies that are most similar to the one selected by a user...</p>
     								<ul class="actions special">
